# quant-platform

./: .gitignore  README.md
quantcore/: CHANGELOG.md  IMPLEMENTATIONS.md  pyproject.toml
quantcore/_quantengine_dropins/: README.md
quantcore/_quantengine_dropins/tests/: test_duckdb_loader_roundtrip.py
quantcore/_quantengine_dropins/tests/fixtures/: build_mini_duckdb.py
quantcore/bench/: bench_core.py
quantcore/native/: .gitignore  Cargo.toml  pyproject.toml
quantcore/native/bench/: bench_online_rolling.py
quantcore/native/python/quantcore_native/: __init__.py  __init__.pyi
quantcore/native/src/: deseasonalize.rs  lib.rs  online_rolling.rs  realized.rs
quantcore/src/quantcore/: __init__.py  __init__.pyi  catalog.py  cli.py  discoveries.py  factors.py  factory.py  leakage.py  mcp_server.py  provenance.py  screening.py
quantcore/src/quantcore/bars/: __init__.py  _streaming_abc.py  bars.py  (+3 more)
quantcore/tests/: run_tests.py  test_alpha_branches_byte_exact.py  test_alpha_embargo.py  test_alpha_f08.py  test_alpha_recordings.py  test_backtest_alpha_refit_kwargs.py  test_bar_dataclass.py  test_bar_flow_ratios_parity.py  test_bars_partial_and_volatility_guards.py  test_bars_runs.py  test_bars_smoke.py  test_block_bootstrap.py  test_catalog.py  test_cli.py  test_conformal_aps_coverage_regressions.py  test_conformal_temporal_order_regressions.py  test_covariance_rmt.py  test_covariance_shrinkage.py  test_cusum_filter_log_return_regression.py  test_cv_score_purged_t1.py  test_diagnostics_invariants.py  test_discoveries.py  test_dsr_cross_trial_sigma.py  test_dtaci_alpha_integration.py  test_dtaci_invariants.py  test_dtaci_recordings.py  test_empirical_comparison.py  test_entropy_causality.py  test_events.py  test_factors.py  test_factory.py  test_ffd_regression.py  test_fixture_invariants.py  test_fixture_recordings.py  test_frozen_strategy_artifact.py  test_get_daily_vol_frequency_regression.py  test_haircut_sharpe.py  test_importance_gate_modes.py  test_importance_gate_sigma.py  test_importance_mda_sem.py  (+49 more)
quantcore/tests/fixtures/: __init__.py  fixture_calibration.py  order_book_canonical.py  sample_weights_afml_snippet_4_10.py  synthetic_tick_stream.py  tml_composition_spike.py  tml_composition_spike_v2.py
quantcore/tests/spikes/: fb1_leadlag_fixture.py  run_fb1.py  s19_pr1_measurements.py  s19_pr1_recorded.json
quantdata/: .gitignore  Makefile  README.md  config.py  databento_ingest.py  dowjones30_tickers.txt  nasdaq100_tickers.txt  pyproject.toml  query.py  sp500_apify_tickers.txt  sp500_tickers.txt  us_large_cap_tickers.txt
quantdata/scripts/: build_catalog.py  ingest_fundamentals.py  ingest_yfinance.py  validate_data.py
quantdata/tests/: test_corp_actions.py  test_panel.py
quantengine/: ARCHITECTURE.md  README.md  pyproject.toml
quantengine/bench/: __init__.py  check_regression.py  throughput.py
quantengine/bench/output/: throughput-20260522-171611.json  throughput-s36b-baseline.json
quantengine/scripts/: _mlflow_log.py  capture_dbn_fixture.py  diagnose_cost_sensitivity.py  diagnose_feature_importance.py  download_backtest_data.py  download_historical_sample.py  label_calibration.py  ml4t_adapter.py  research_backtest.py  run_amzn_combined.py  walk_forward.py  walk_forward_micro.py
quantengine/src/quantengine/: __init__.py
quantengine/tests/: conftest.py  test_audit_journal.py  test_broker_contract_equivalence.py  test_calendar.py  test_cli_bar_builder_wiring.py  test_corp_actions.py  test_cost_model_lab_surface.py  test_cost_realism.py  test_daily_cycle.py  test_daily_cycle_rename.py  test_databento_config.py  test_databento_feed.py  test_fail_loud_reconcile.py  test_ibkr_async.py  test_ibkr_async_serialization.py  test_ibkr_broker.py  test_ibkr_config.py  test_ibkr_connection.py  test_ibkr_daily_cycle.py  test_ibkr_order_mapping.py  test_ibkr_paper_smoke.py  test_ibkr_positions.py  test_order_tracker.py  test_orders_stop.py  test_orders_trail.py  test_paper_broker.py  test_paper_broker_order_types.py  test_paper_soak_60min.py  test_persistence.py  test_portfolio_state.py  test_rebalance.py  test_reconcile.py  test_reconciler.py  test_recovery.py  test_recovery_partial_fill_dedup.py  test_recovery_safebroker_roundtrip.py  test_risk_gate.py  test_risk_participation.py  test_s26_cross_broker_mapping_equivalence.py  test_safe_broker.py  (+16 more)
quantlake/: .gitignore  CHANGELOG.md  pyproject.toml
quantlake/src/quantlake/: __init__.py
quantlake/tests/: test_adjusted_parity.py  test_asof_property.py  test_bitemporal_schema.py  test_feature_store.py  test_identity_sentinel.py  test_ingest_lseg.py  test_membership_delistings.py  test_migration_parity.py  test_parity_convention.py  test_prices_parity.py  test_reopen_persistence.py  test_ric_mapping.py  test_security_master.py  test_sources.py  test_symbology_master.py
quantstrat/: .gitignore  README.md  RESULTS.md  pyproject.toml
quantstrat/research/: __init__.py  tradeability_sweep.py
quantstrat/src/quantstrat/: __init__.py
quantstrat/tests/: conftest.py  test_backtest.py  test_cost_spine.py  test_cov_benchmark_embargo_arithmetic.py  test_cov_benchmark_high_q.py  test_cov_benchmark_smoke.py  test_evaluate.py  test_factor_attribution.py  test_hrp.py  test_metrics.py  test_metrics_extra.py  test_nco.py  test_relative_metrics.py  test_reporting.py  test_risk_analytics.py  test_s19_leak_injection_fixture.py  test_s20_high_q_cov_fixture.py  test_s24_e2e_smoke.py  test_s25_paper_broker_smoke.py  test_s26_afml_e2e_paper.py  test_s27_realistic_e2e_paper.py
quantstrat/tests/fixtures/: s24_dj30_2022_2024_signals.parquet
quantstrat/tests/research/: _mlflow_tracking.py  _realistic_panel.py  _research_diagnostics.py  _research_manifest.py  _toy_afml.py  test_mlflow_smoke.py  test_realistic_afml_signal_producer.py  test_realistic_panel.py  test_research_diagnostics.py  test_research_manifest.py  test_s27_mlflow_run_logging.py  test_s29_tradeability_sweep_smoke.py  test_toy_afml_signal_producer.py
quantstrat/tests/strategies/: test_cs_alpha_nco.py  test_cs_alpha_nco_kelly_floor.py  test_panel_weights.py
(+152 files in other folders)
