[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantlake"
version = "0.1.0"
description = "PIT cross-sectional data substrate: bitemporal store, security master, survivorship-complete universe/delistings, as-of joins, and a feature store. The lake under quantcore/quantengine/quantstrat."
readme = "CHANGELOG.md"
requires-python = ">=3.11"
authors = [{ name = "Jules" }]
license = { text = "Proprietary" }
dependencies = [
    "duckdb>=1.0",
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "hypothesis>=6.100",
    "ruff==0.15.11",
    "basedpyright==1.39.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.basedpyright]
pythonVersion = "3.11"

[dependency-groups]
dev = [
    "hypothesis>=6.155.2",
    "pytest>=9.0.3",
]
