[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantstrat"
version = "0.1.0"
description = "Research backtesting layer. Walk-forward engine, cross-sectional portfolio construction, transaction-cost and performance accounting, built on quantcore primitives and quantengine's Strategy ABC."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Jules" }]
license = { text = "Proprietary" }
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.13",
    "scikit-learn>=1.8.0",
    "quantcore",
    "quantengine",
]

[project.optional-dependencies]
reporting = ["matplotlib>=3.8"]
research = ["mlflow>=2.10"]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "basedpyright>=1.18",
    "duckdb>=1.0",
    "pyarrow>=15.0",
]

[tool.uv.sources]
quantcore = { path = "../quantcore", editable = true }
quantengine = { path = "../quantengine", editable = true }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.basedpyright]
include = ["src", "tests"]
extraPaths = ["src"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
